# elo-football

./: .cgcignore  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  elo_project_data.md  main.py  mcp.json  pyproject.toml  test_api.py
backend/: README.md  __init__.py  main.py  models.py  slugs.py
data/: elo.db  fetch_epl_csvs.sh  fetch_league_csvs.sh
docs/: MILESTONE_UPDATES_2026-03-14.md  PRE_LAUNCH_CHECKLIST.md  ROADMAP_PRIORITIES.md  adr-004-live-data-source.md  adr-frontend-tooling.md  adr-storage-engine.md  api-contract.md  data_ingest.md  elo_project_spec.md  milestones.md  momentum-research-summary.md  parameter-experiments.md  sprint-1-plan.md  sprint-10-plan.md  sprint-11-plan.md  sprint-12-design-spec.md  sprint-12-plan.md  sprint-12.1-plan.md  sprint-13-plan.md  sprint-14-plan.md  sprint-15-plan.md  sprint-15.1-plan.md  sprint-15.2-plan.md  sprint-2-plan.md  sprint-3-plan.md  sprint-4-plan.md  sprint-5-plan.md  sprint-6-plan.md  sprint-7-plan.md  sprint-8-plan.md  sprint-8-tech-debt.md  sprint-9-plan.md
notebooks/: epl_elo_explore.ipynb  momentum_blend_validation.py  momentum_research.py  momentum_research_optimized.py  param_sweep.py  run_analysis.py  run_multi_league.py  run_unified.py  sprint2_impact.py  tier_optimization.py  tier_optimization_results.json
scripts/: backfill_fixture_predictions.py  backfill_predictions.py  backup_db.sh  build_team_mappings.py  cron_runner.py  playwright_test.py  playwright_test2.py  playwright_test3.py  playwright_test_final.py  run_daily_update.py
(+62 files in other folders)
