[project]
name = "elo-epl-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "codegraphcontext>=0.3.1",
    "pytest>=9.0.2",
]
